<resources>
    <string name="app_name">craftket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="capacity_default">0</string>
    <string name="default_minimum_price">0</string>
    <string name="default_maximum_price">10000</string>
    <string name="start_date_filter">Start Date</string>
    <string name="end_date_filter">End Date</string>
</resources>