<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FiltersActivity"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">


    <Toolbar
        android:id="@+id/filters_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/outline_arrow_back_ios_new_24"
        android:collapseIcon="@drawable/settings">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/filters_BTN_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_gravity="end"
        android:text="Reset all"
        android:padding="0dp"
        android:textSize="@dimen/textSize"
        android:clickable="true"
        android:textColor="@color/textColor"/>

    </Toolbar>

    <TextView
        android:id="@+id/filters_TXT_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filters"
        android:textStyle="bold"
        android:layout_below="@id/filters_toolbar"
        android:textSize="32sp"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/filters_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_below="@id/filters_TXT_title"
        android:layout_above="@id/filters_BTN_apply"
        android:scrollbars="none"
        android:overScrollMode="never">

    <LinearLayout
        android:id="@+id/filters_LAYOUT_main_filters"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/filters_TXT_title">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="@dimen/filter_title_size"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/filters_TEXT_locationSearch"
        android:hint="Location"
        android:textStyle="bold"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Level"
        android:textSize="@dimen/filter_title_size"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/filters_LAYOUT_levels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <CheckBox
            android:id="@+id/filters_CHECKBOX_beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/filters_CHECKBOX_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/filters_CHECKBOX_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/gray" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activity"
        android:textSize="@dimen/filter_title_size"
        android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/filters_CHECKBOX_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price Range"
        android:textSize="@dimen/filter_title_size"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:gravity="center">
        <TextView
            android:id="@+id/filters_LBL_min"
            android:layout_height="wrap_content"
            android:text="Min"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:layout_width="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filters_TXT_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="0dp"
            android:text="@string/default_minimum_price"
            android:drawableEnd="@drawable/shekel"
            android:gravity="center_horizontal"
            android:textSize="@dimen/textSize" />
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

<!--        <Space-->
<!--            android:layout_width="16dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="—"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <TextView
                android:id="@+id/filters_LBL_max"
                android:layout_height="wrap_content"
                android:text="Max"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                android:layout_width="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filters_TXT_max_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="0dp"
                android:text="@string/default_maximum_price"
                android:drawableEnd="@drawable/shekel"
                android:textSize="@dimen/textSize" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        </LinearLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/filters_SLIDER_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:values="@array/slider_values"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="10000"
        app:trackHeight="4dp"
        app:thumbColor="@color/orange"
        app:haloColor="@color/orange"
        app:tickColor="@color/orange"
        app:trackColor="@color/orange"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date Range"
            android:textSize="@dimen/filter_title_size"
            android:textStyle="bold"
            />
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/filters_TXT_start_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/outline_calendar_today_24"
            android:text="@string/start_date_filter"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/filters_TXT_end_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/outline_calendar_today_24"
            android:text="@string/end_date_filter"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filters_BTN_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        android:backgroundTint="@color/orange"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_gravity="center"/>

</LinearLayout>